updated background images, general tweaking

--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
 
     <div class="row row-content about" id="#about"><a name="about"></a>
         <div class="col-xs-12 col-md-6 col-md-offset-2">
-            <h1>
+            <h1 class="about-text">
                 Chris Wilson
             </h1>
         </div>
         <div class="row">
             <div class="col-xs-12 col-md-6 col-md-offset-2">
-                <h3>
+                <h3 class="about-text">
                     I finished my PhD in Molecular and Cellular Biology at the end of 2015. While I waited for it to be
                     examined I have been learning to code. Partly for my own satisfaction partly with the thought of
                     doing it
@@ -157,7 +157,7 @@
     </div>
 
 
-    <div class="row row-content portfolio text-center" id="#portfolio"><a name="portfolio"></a>
+    <div class="row portfolio text-center" id="#portfolio"><a name="portfolio"></a>
         <div class="col-xs-12 col-md-6 col-md-offset-3">
         <h1>
             Portfolio
