Fixed portfolio breaking different width screens.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link href="css/theme.css" rel="stylesheet">
     <!-- Custom style for this document -->
     <link href="css/index.css" rel="stylesheet">
+    <link rel='stylesheet' media='screen and (min-width: 971px)' href='css/index_medium.css'>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
