added skate_skills to portfolio

--- a/index.html
+++ b/index.html
@@ -226,6 +226,14 @@
                 </a>
 
     </div>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+            <a href="skate_skills.html">
+                <h4>Skate Skills</h4>
+                <img src="img/index_thumb_skate_skills.jpg"
+                     class="img-thumbnail img-responsive">
+            </a>
+
+        </div>
         </div>
 
 
