Added Simon Game

--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
         </div>
 
         <div class="col-xs-12 col-sm-6 col-md-4">
-            <a href="fcc_tribute_page.html">
-                <h4>Tribute Page</h4>
-                <img src="img/index_thumb_tribute_page.jpg"
+            <a href="fcc_simon_game.html">
+                <h4>Simon Game</h4>
+                <img src="img/index_thumb_simon_game.jpg"
                  class="img-thumbnail img-responsive">
             </a>
         </div>
